--- a/index.html
+++ b/index.html
@@ -85,18 +85,84 @@
 
   </header>
 
+  <nav class="container-fluid nav-produtos">
+    <!--Container-->
+    <section class="container">
+      <!--Itens List-->
+      <ul class="nav">
+        <li class="nav-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+          </svg>
+          Moda Feminina
+          <!--Menu bar-->
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              Lançamentos
+            </li>
+            <li class="nav-item">
+              Plus Size
+            </li>
+            <li class="nav-item">
+              Moda Praia
+            </li>
+            <li class="nav-item">
+              Acessórios
+            </li>
+            <li class="nav-item">
+              Promoção
+            </li>
+          </ul>
+          <!--Menu bar end-->
+        </li>
+        <li class="nav-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+          </svg>
+          Calçados
+
+        </li>
+      </ul>
+      <!--Itens List end-->
+    </section>
+    <!--Container end-->
+
+  </nav>
+
+  <!--Banner slider-->
+  <section id="banner-promocionais" class="container carousel slide" data-bs-ride="carousel">
+    <article class="carousel-inner">
+
+      <figure class="carousel-item active">
+        <img src="./assets/images/banner-1.jpg" class="d-block w-100" alt="Banner-promocional-1">
+      </figure>
+      <figure class="carousel-item">
+        <img src="./assets/images/banner-2.jpg" class="d-block w-100" alt="Banner-promocional-2">
+      </figure>
+    </article>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#banner-promocionais" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#banner-promocionais" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </section>
+  <!--Banner slider end-->
 
 
 
-  <script src="./assets/js/bootstrap.bundle.min.js"
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="./assets/js/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-  <script src="./assets/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
