--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <header class="container-fluid">
     <section class="container">
-      <article class="row">
+      <article class="row d-flex align-items-center">
         <!--logo-->
         <a class="col-md-2" href="/">
           <img src="./assets/images/logo.svg" alt="logo da empresa moda da mulher">
@@ -40,10 +40,10 @@
         <!--logo end-->
 
         <!--search bar-->
-        <form class="col-md-7" action="#">
+        <form class="col-md-7 d-flex align-items-center" action="#">
           <input type="text" name="name" placeholder="Procurar Roupas aqui">
 
-          <button>
+          <button class="d-flex align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
               viewBox="0 0 16 16">
               <path
@@ -55,7 +55,7 @@
         <!--search bar end-->
 
         <!--sign and shop car-->
-        <ul class="col-md-3 nav">
+        <ul class="col-md-3 nav d-flex align-items-center justify-content-around">
           <li class="nav-item">
             <a href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -67,7 +67,7 @@
           </li>
 
           <li class="nav-item">
-            <span class="notificacao"></span>
+            <span class="notificacao d-flex align-items-center justify-content-around">3</span>
             <a href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
                 viewBox="0 0 16 16">
@@ -132,31 +132,363 @@
     <!--Container end-->
 
   </nav>
+  <main>
 
-  <!--Banner slider-->
-  <section id="banner-promocionais" class="container carousel slide" data-bs-ride="carousel">
-    <article class="carousel-inner">
+    <!--Banner slider-->
+    <section id="banner-promocionais" class="container carousel slide" data-bs-ride="carousel">
+      <article class="carousel-inner">
 
-      <figure class="carousel-item active">
-        <img src="./assets/images/banner-1.jpg" class="d-block w-100" alt="Banner-promocional-1">
-      </figure>
-      <figure class="carousel-item">
-        <img src="./assets/images/banner-2.jpg" class="d-block w-100" alt="Banner-promocional-2">
-      </figure>
-    </article>
+        <figure class="carousel-item active">
+          <img src="./assets/images/banner-1.jpg" class="d-block w-100" alt="Banner-promocional-1">
+        </figure>
+        <figure class="carousel-item">
+          <img src="./assets/images/banner-2.jpg" class="d-block w-100" alt="Banner-promocional-2">
+        </figure>
+      </article>
 
-    <button class="carousel-control-prev" type="button" data-bs-target="#banner-promocionais" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#banner-promocionais" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </section>
-  <!--Banner slider end-->
+      <button class="carousel-control-prev" type="button" data-bs-target="#banner-promocionais" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#banner-promocionais" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </section>
+    <!--Banner slider end-->
+
+    <!--Banners promocionais 6 cols-->
+    <section class="container">
+      <section class="row">
+        <!--Banners end-->
+        <article class="col-md-6">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card"
+            viewBox="0 0 16 16">
+            <path
+              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z" />
+            <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z" />
+          </svg>
+          <p>Parcele em até<br>
+            <strong> sem juros</strong>
+          </p>
 
 
+        </article>
+        <article class="col-md-6">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
+            viewBox="0 0 16 16">
+            <path
+              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+          </svg>
+          <p>
+            Entrega para<br>
+            <strong>todo Brasil</strong>
+          </p>
+
+        </article>
+        <!--Banners end-->
+      </section>
+    </section>
+    <!--Banners promocionais 6 cols end-->
+
+    <!--row Produtos-->
+    <section class="container">
+
+      <h1 class="text-center">Mais Populares</h1>
+      <article class="row">
+        <!--produto-->
+        <section class="produtos col-md-3">
+          <img src="./assets/images/croped-rosa.png" class="img-fluid" alt="cropped rosa">
+          <article class="produtos-itens">
+
+            <h2>Cropped rosa</h2>
+
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+
+            </div>
+
+            <strong>
+              R$ 59,90
+            </strong>
+
+          </article>
+
+        </section>
+        <!--end produto-->
+
+        <!--produto-->
+        <section class="produtos col-md-3">
+          <img src="./assets/images/camiseta-manga-comprida.png" class="img-fluid" alt="camiseta-manga-comprida">
+          <article class="produtos-itens">
+
+            <h2>Camiseta manga comprida</h2>
+
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+
+            </div>
+
+            <strong>
+              R$ 79,90
+            </strong>
+
+          </article>
+
+        </section>
+        <!--end produto-->
+
+        <!--produto-->
+        <section class="produtos col-md-3">
+          <img src="./assets/images/Camiseta Listrada.png" class="img-fluid" alt="Camiseta Listrada">
+          <article class="produtos-itens">
+
+            <h2>Camiseta listrada</h2>
+
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+
+            </div>
+
+            <strong>
+              R$ 49,90
+            </strong>
+
+          </article>
+
+        </section>
+        <!--end produto-->
+
+        <!--produto-->
+        <section class="produtos col-md-3">
+          <img src="./assets/images/saia-plisada.png" class="img-fluid" alt="saia-plisada">
+          <article class="produtos-itens">
+
+            <h2>Saia plisada</h2>
+
+            <div class="produtos-stars">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+              </svg>
+
+            </div>
+
+            <strong>
+              R$ 117,90
+            </strong>
+
+          </article>
+
+        </section>
+        <!--end produto-->
+
+      </article>
+
+    </section>
+    <!--end Produto-->
+
+    <div class="d-flex justify-content-center">
+      <button type="button" class="btn btn-warning col-md-2" value="#">VEJA MAIS</button>
+    </div>
+
+  </main>
+
+  <footer class="container-fluid">
+    <!--container-->
+    <section class="container">
+      <!--menus-->
+      <section class="row">
+        <article class="col-md-4">
+
+          <!--atendimento-->
+          <ul class="nav flex-column">
+            <h4>Atendimento</h4>
+            <!--links-->
+            <li class="nav-item">
+              <a href="tel:+55 9 9999 9999">
+                (11)91999999999
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="mailto:contato@sualoja.com.br">
+                contato@sualoja.com.br
+              </a>
+            </li>
+            <li class="nav-item">
+              Horário de atendimento on-line:
+            </li>
+            <li class="nav-item">
+              Segunda à sexta das 9:00 até as 17:30h
+            </li>
+            <!--end links-->
+          </ul>
+          <!--end atendimento-->
+
+        </article>
+
+        <article class="col-md-3">
+
+          <!--Acesso Rápido-->
+          <ul class="nav flex-column">
+            <h4>Acesso Rápido</h4>
+            <!--links-->
+            <li class="nav-item">
+              <a href="#">
+                Minha conta
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">
+                Meus pedidos
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">
+                Rastrear meus pedidos
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">
+                Troca e devoluções
+              </a>
+            </li>
+
+            <!--end links-->
+          </ul>
+          <!--end Acesso Rápido-->
+
+        </article>
+
+        <article class="col-md-3">
+
+          <!-- Institucional-->
+          <ul class="nav flex-column">
+            <h4>Institucional</h4>
+            <!--links-->
+            <li class="nav-item">
+              <a href="#">
+                Sobre a Loja
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">
+                Politica e privacidade
+              </a>
+            </li>
+
+            <!--end links-->
+          </ul>
+          <!--end Institucional-->
+
+        </article>
+
+        <article class="col-md-2">
+
+          <!-- Mais acessadas-->
+          <ul class="nav flex-column">
+            <h4>Mais acessadas</h4>
+            <!--links-->
+            <li class="nav-item">
+              <a href="#">
+                Cropped rosa
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">
+                Camiseta manga co...
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">
+                Camiseta listrada
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#">
+                Saia plisada
+              </a>
+            </li>
+
+            <!--end links-->
+          </ul>
+          <!--end Mais acessadas-->
+
+        </article>
+
+      </section>
+      <!--end menus-->
+    </section>
+    <!--container-->
+  </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
