--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <!--end produto-->
 
         <!--produto-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./ver-produto.html" class="produtos-container col-md-3">
           <img src="./assets/images/camiseta-manga-comprida.png" class="img-fluid" alt="camiseta-manga-comprida">
           <article class="produtos-itens">
 
