--- a/ver-produto.html
+++ b/ver-produto.html
@@ -147,11 +147,11 @@
 
 
       <article class="row produtos-compra">
-        <figure class="col-md-7">
+        <figure class="col-md-7 mb-3">
           <img src="./assets/images/camiseta-manga-comprida (1).png" class="img-fluid" alt="camiseta manga comprida">
         </figure>
 
-        <section class="col-md-5 d d-flex flex-column justify-content-around">
+        <section class="col-md-5 mb-3 d d-flex flex-column justify-content-around">
           <!--Conteúdo-->
           <article class="produtos-conteudo">
             <h1>Camiseta manga comprida</h1>
@@ -209,7 +209,7 @@
         </section>
 
         <!--Plugin Facebook-->
-        <div class="fb-comments col-md-12 mt-5 mb-5" data-href="http://127.0.0.1:5500/ver-produto.html"
+        <div class="fb-comments col-md-12 mt-5 mb-2" data-href="http://127.0.0.1:5500/ver-produto.html"
           data-width="100%" data-numposts="5">
         </div>
         <!--End Plugin Facebook-->
