Correçoes pagina final

--- a/ver-produto.html
+++ b/ver-produto.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ver produto</title>
+  <title>Produto Camiseta manga comprida</title>
 
   <!--favicons-->
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/favicons/apple-icon-57x57.png">
@@ -141,7 +141,7 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
           <li class="breadcrumb-item"><a href="./camisetas.html">Camisetas</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Ver produto</li>
+          <li class="breadcrumb-item active" aria-current="page">Camiseta manga comprida</li>
         </ol>
       </nav>
 
